tests/error/10_type_and_operand_mismatch.mire
load kioto

pub fn main: () {
    set x = 10
    set y = x > 5 && "hello"
}